manifests-operators/validating-webhook-config.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: pod-team-label-validator
webhooks:
- name: pod-team-label.default.svc
  admissionReviewVersions: ["v1"]
  sideEffects: None
  failurePolicy: Ignore
  clientConfig:
    service:
      name: validating-webhook-svc
      namespace: default
      path: /validate
      port: 443
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURwRENDQW95Z0F3SUJBZ0lVSFBzWnBmSWdNRjBtWVFWK0ZRRndtRFN1bGZRd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0xURXJNQ2tHQTFVRUF3d2lkbUZzYVdSaGRHbHVaeTEzWldKb2IyOXJMWE4yWXk1a1pXWmhkV3gwTG5OMgpZekFlRncweU5qQTBNakl4TnpBeE5ESmFGdzB5TnpBME1qSXhOekF4TkRKYU1DMHhLekFwQmdOVkJBTU1JblpoCmJHbGtZWFJwYm1jdGQyVmlhRzl2YXkxemRtTXVaR1ZtWVhWc2RDNXpkbU13Z2dFaU1BMEdDU3FHU0liM0RRRUIKQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUMvc3lRb0ZRSVhCOWdMM0pFejdpY2hMMURlVTN5OXl5VXlIUGNua3pSQQpidWltNjk5V2d2MX [...]
  rules:
  - apiGroups: [""]
    apiVersions: ["v1"]
    operations: ["CREATE"]
    resources: ["pods"]
    scope: "Namespaced"
  namespaceSelector:
    matchExpressions:
    - key: kubernetes.io/metadata.name
      operator: NotIn
      values:
      - kube-system
      - argocd
      - longhorn-system
      - argo-rollouts
      - traefik
      - metacontroller
